<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Manga Reader</string>
    <!-- sv means string values -->
    <string name="sv_download">Download</string>
    <string name="sv_back">Back</string>
    <string name="sv_delete">Delete</string>
    <string name="sv_add_to_favorites">Add to Favorites</string>
    <string name="sv_remove_from_favorites">Remove from Favorites</string>
    <string name="sv_chapters">Chapters:</string>
    <string name="sv_selected">Selected: </string>
    <string name="sv_queued">Queued: </string>
    <string name="sv_select_range">Select range</string>
    <string name="sv_select_all">Select all</string>
    <string name="sv_select_range_dialog">Select range</string>
    <string name="sv_all">all</string>
    <string name="sv_ok">OK</string>
    <string name="sv_cancel">Cancel</string>
    <string name="sv_toggle_full_screen">Toggle full screen</string>
    <string name="sv_disable_full_screen">Disable full screen</string>
    <string name="sv_filter">Filter</string>
    <string name="p_internet_error">Problems with internet connection</string>
    <string name="p_failed_to_load_chapter_info">Failed to load chapter info: </string>
    <string name="p_failed_to_show_loaded">Failed to show downloaded manga: </string>
    <string name="p_failed_to_delete">Failed delete manga: </string>
    <string name="sv_search">Search</string>
    <string name="sv_read_online">Read online</string>
    <string name="sv_drawer_open">Open menu</string>
    <string name="sv_drawer_close">Close menu</string>
    <string name="menu_updates">Updates</string>
    <string name="menu_search">Search</string>
    <string name="menu_history">History</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_love">Favorite</string>
    <string name="menu_local">Downloads</string>
    <string name="menu_download">Download Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="cap_page">Page</string>
    <string name="cap_chapter">Chapter</string>
    <string name="tutorial_viewer_1">Click on the blue highlighted area to move backward and forward through the chapter</string>
    <string name="tutorial_viewer_2">Drag from left to right to open the viewer menu</string>
    <string name="sv_select_last">Select last</string>
    <string name="sv_select">Select</string>
    <string name="sv_download_path">Download path</string>
    <string name="p_manga_new_chapters">Manga new chapters</string>
    <string name="sv_disable_ads">Disable ads</string>
    <string name="p_want_ads_question">By leaving advertisement enabled, you support the author</string>
    <string name="sv_update">Check updates</string>
    <string name="p_useful_main_fragment">There will be displayed information about new chapters. In the next version it will be done automatically, and now you will need to press \'Refresh\'</string>
    <string name="profile_promise">Press to enter profile</string>
    <string name="tutorial_menu_title">Open menu</string>
    <string name="tutorial_menu_text">by clicking on three lines or dragging the screen from left</string>
    <string name="sv_genres">Genres</string>
    <string name="sv_filters">Filters</string>
    <string name="crash_toast_text">App crashed. Please send this error as an email.</string>
    <string name="sv_genre_search_not_supported">Search by genre is not supported by this site</string>
    <string name="btn_back">Back</string>
    <string name="btn_forward">Forward</string>
    <string name="sv_always_show_viewer_controls">Always show control buttons in viewer</string>
    <string name="e_failed_remove_history">Failed to remove history: </string>
    <string name="sv_main_page">Main page</string>
    <string name="sv_next_chapter">Next chapter</string>
    <string name="error_while_update">Error while updating, try again later</string>
    <string name="sv_toggle_rtl">Read right to left</string>
    <string name="got_updates">Got new chapters of manga:</string>


    <string name="banner_ad_unit_id">ca-app-pub-1133278580100525/6277438290</string>
    <string name="add_source">Add source</string>
    <string name="popular_sources">Popular sources:</string>
    <string name="source_name">Source\'s name</string>
    <string name="source_not_supported">This source is not available</string>
    <string name="source_already_added">Source already added</string>
    <string name="tutorial_close">Got it!</string>
    <string name="please_rate">Like this app? Why not give it a 5 star in Google Play?</string>
    <string name="please_rate_title">Rate this app</string>
    <string name="please_rate_forget_about_it">I don\'t want to</string>
    <string name="please_rate_later">Later</string>
    <string name="please_rate_ok">OK</string>
    <string name="loading">Loading</string>
    <string name="getting_chapter_info">Initializing chapter</string>
    <string name="getting_manga_info">Initializing manga</string>
    <string name="last_downloaded">Last downloaded</string>
    <string name="not_downloaded">This chapter is not downloaded</string>
    <string name="no_such_chapter">No such chapter</string>
    <string name="already_last_chapter">This is the last chapter</string>
    <string name="retry">Retry</string>
    <string name="error_while_init_manga">Error while loading manga info</string>
    <string name="error_while_loading_chapter">Error while loading chapter. Check your internet connection.</string>
    <string name="search_nothing_found">Nothing found</string>
    <string name="no_active_downloads">No active downloads</string>
    <string name="info_item_genre">Genre:</string>
    <string name="info_item_author">Author:</string>
    <string name="description">Description</string>
    <string name="no_added_sources">You got no added sources</string>
    <string name="happy_reading">Enjoy reading!</string>
    <string name="google_account_info_title">Google account</string>
    <string name="just_now">Just now</string>
    <string name="never">Never</string>
    <string name="sv_synchronized">Synchronized:</string>
    <string name="time_read">Time read</string>
    <string name="username">Username</string>
    <string name="mangas_complete">Mangas complete</string>
    <string name="megabytes_downloaded">Megabytes downloaded</string>
    <string name="additional">Additional</string>
    <string name="email">Email</string>
    <string name="hours">hour(-s)</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="sv_add">Add local manga</string>
    <string name="hint_filter_edittext">Search…</string>
    <string name="text_clear_filter">Clear</string>
    <string name="open_in_repo">Open on %1$s</string>
    <string name="application_version_settings_title">App version</string>
    <string name="yandex_account_info_title">Yandex account</string>
    <string name="images_from">Images from manga</string>
    <string name="sv_reverse">Inverse</string>
    <string name="sv_decoder">Decoder</string>
    <string name="open">Open</string>
    <string name="sv_tracking">Tracking</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="submit_auth">Sign in</string>
    <string name="authorize">Authorize</string>
    <string name="not_authorized">Not authorized</string>
    <string name="logout">Logout</string>
    <string name="sv_volume_buttons">Volume buttons</string>
    <string name="sv_use_for_paging">Use for paging</string>
</resources>
