<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/fragment_background"
              android:padding="5dip">

    <View
        android:id="@+id/fake_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:id="@+id/ind"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/fake_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sv_select_all"/>

        <RelativeLayout
            android:id="@+id/select_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <com.danilov.supermanga.core.view.RippleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rippleColorOne="#33b5e5"
                app:rippleColorTwo="#ffe5000d"
                android:padding="5dp"
                app:backgroundColor="@android:color/transparent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/sv_select_last"/>

            </com.danilov.supermanga.core.view.RippleView>

        </RelativeLayout>

    </LinearLayout>



    <ListView
        android:layout_below="@+id/ind"
        android:id="@+id/chaptersListView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fastScrollEnabled="true"
        android:fastScrollAlwaysVisible="true"
        android:layout_above="@+id/number_select"/>


    <Button
        android:id="@+id/number_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sv_select_range"
        style="@style/Manga.ButtonCommon"
        android:layout_above="@+id/linearLayout"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/Manga.ButtonCommon"
            android:layout_height="wrap_content"
            android:text="@string/sv_download"/>

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/Manga.ButtonCommon"
            android:layout_height="wrap_content"
            android:text="@string/sv_back"/>

    </LinearLayout>

</RelativeLayout>